--- a/package.json
+++ b/package.json
@@ -23,5 +23,11 @@
 		"svelte": "^4.2.7",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"autoprefixer": "^10.4.19",
+		"firebase": "^10.12.3",
+		"postcss": "^8.4.39",
+		"tailwindcss": "^3.4.4"
+	}
 }
